# tsdf_fusion_cmake

./: .gitignore  README.md
data_my/1/: frame-000001.pose.txt  frame-000006.pose.txt
data_my/2/: camera-intrinsics.txt  frame-000026.pose.txt  frame-000043.pose.txt
data_my/dense-correspondence-data/: demo  demo.cu  format.py  fusion.py  mesh_ascii.ply  mesh_binary.ply  mesh_color_binary.ply
data_my/dense-correspondence-data/images/: 000000_pose.txt  000044_pose.txt  000051_pose.txt  camera-intrinsics.txt  pose_data.yaml
tsdf-fusion/: demo  demo.cu  tsdf_bin_to_ply.py
tsdf-fusion-spartan/: demo  demo.cu
tsdf-fusion/data/: camera-intrinsics.txt  frame-000003.pose.txt  frame-000004.pose.txt  frame-000005.pose.txt  frame-000009.pose.txt
tsdf_fusion_cmake/: CMakeLists.txt  README.md  fusion.cu  fusion.cuh  fusion.h  main.cpp
tsdf_fusion_python/: README.md  demo.py  demo_test.py  fusion.py  proccess.py
tsdf_fusion_python/capture/1/: pose
tsdf_fusion_python/capture/2/: pose
tsdf_fusion_python/data/: frame-000000.pose.txt  frame-000002.pose.txt  frame-000007.pose.txt  frame-000008.pose.txt  frame-000010.pose.txt
